<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:rb="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_radius_18"
        android:paddingHorizontal="20dp">

        <ImageView
            android:layout_marginTop="22dp"
            android:id="@+id/iv_rate_app_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/rate_app_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_dialog_message"
            android:layout_width="wrap_content"
            android:paddingHorizontal="16dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/quicksand_regular"
            android:text="@string/how_much_do_you_love_app"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_rate_app_bg" />

        <com.tapbi.spark.emojimashup.utils.rateapp.view.RotationRatingBar
            android:id="@+id/simpleRatingBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:numStars="5"
            android:stepSize="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_dialog_message"
            app:starPadding="18"
            rb:clearRatingEnabled="true"
            rb:touchable="true" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_rate_now"
            android:layout_width="130dp"
            android:layout_height="42dp"
            android:layout_marginVertical="34dp"
            android:background="@drawable/bg_gradient_radius_100_ripple_white"
            android:fontFamily="@font/quicksand_medium"
            android:gravity="center"
            android:text="@string/rate"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_cancel"
            app:layout_constraintTop_toBottomOf="@id/simpleRatingBar" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="130dp"
            android:layout_height="42dp"
            android:layout_marginVertical="34dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_gray_radius_100_ripple_blue"
            android:fontFamily="@font/quicksand_medium"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/color_636366"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_rate_now"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/simpleRatingBar" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>